--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -71,7 +72,9 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/services/http-request.js"></script>
-        <script src="scripts/services/dataservice.js"></script>
+        <script src="scripts/services/data-service.js"></script>
+        <script src="scripts/directives/gantt-chart.js"></script>
+        <script src="scripts/directives/swimlane.js"></script>
         <!-- endbuild -->
 </body>
 </html>
